fixed responsive text spacing for paragraph elements

--- a/src/App.css
+++ b/src/App.css
@@ -6,5 +6,9 @@
 }
 
 h2, p, a {
-  margin-bottom: 15px;
+  margin-bottom: 20px;
+}
+
+p {
+  padding-inline: 10dvw;
 }
